--- a/themes/netlify-basic/layouts/index.html
+++ b/themes/netlify-basic/layouts/index.html
@@ -8,6 +8,12 @@
     </div>
     <h2>
       This is a bare-bones Hugo project that has everything you need to quickly deploy it to Netlify
+      <iframe
+      src="https://www.chatbase.co/chatbot-iframe/MIYC4ZlZgneMPdP4fTP-Q"
+      width="100%"
+      style="height: 100%; min-height: 700px"
+      frameborder="0"
+      ></iframe>
     </h2>
     <div class="bttns">
       <a href="https://app.netlify.com/start/deploy?repository=https://github.com/netlify-templates/hugo-quickstart" class="bttn primary">Deploy to Netlify</a>
