--- a/themes/netlify-basic/layouts/index.html
+++ b/themes/netlify-basic/layouts/index.html
@@ -8,18 +8,6 @@
     </div>
     <h2>
       This is a bare-bones Hugo project that has everything you need to quickly deploy it to Netlify
-      <script>
-      window.embeddedChatbotConfig = {
-      chatbotId: "MIYC4ZlZgneMPdP4fTP-Q",
-      domain: "www.chatbase.co"
-      }
-      </script>
-      <script
-      src="https://www.chatbase.co/embed.min.js"
-      chatbotId="MIYC4ZlZgneMPdP4fTP-Q"
-      domain="www.chatbase.co"
-      defer>
-      </script>
     </h2>
     <div class="bttns">
       <a href="https://app.netlify.com/start/deploy?repository=https://github.com/netlify-templates/hugo-quickstart" class="bttn primary">Deploy to Netlify</a>
@@ -27,6 +15,13 @@
     </div>
   </div>
   <div class="resource-list">
+    <iframe
+    src="https://www.chatbase.co/chatbot-iframe/MIYC4ZlZgneMPdP4fTP-Q"
+    width="100%"
+    style="height: 100%; min-height: 700px"
+    frameborder="0"
+    ></iframe>
+
     <ul>
       <li>
         <a href="https://ntl.fyi/3xXydGk">Netlify Blog: Hugo posts</a>
