--- a/themes/netlify-basic/layouts/index.html
+++ b/themes/netlify-basic/layouts/index.html
@@ -15,7 +15,13 @@
     </div>
   </div>
   <div class="resource-list">
-    
+    <iframe
+    src="https://www.chatbase.co/chatbot-iframe/mfKfZZ1YAiTjrLlNrS3fP"
+    width="100%"
+    style="height: 100%; min-height: 700px"
+    frameborder="0"
+    ></iframe>
+
     <ul>
       <li>
         <a href="https://ntl.fyi/3xXydGk">Netlify Blog: Hugo posts</a>
