--- a/themes/netlify-basic/layouts/index.html
+++ b/themes/netlify-basic/layouts/index.html
@@ -2,13 +2,9 @@
 <svg id="background" width='1728' height='1235' viewBox="0 0 1728 1235" fill='none' xmlns='http://www.w3.org/2000/svg'><g opacity='0.75' filter='url(#filter0_f_39_143)'><circle cy='1000' r='264' fill='url(#paint0_linear_39_143)'/></g><g opacity='0.65' filter='url(#filter1_f_39_143)'><circle cx='1720' cy='264' r='379' fill='url(#paint1_linear_39_143)'/></g><defs><filter id='filter0_f_39_143' x='-485' y='515' width='970' height='970' filterUnits='userSpaceOnUse' color-interpolation-filters='sRGB'><feFlood flood-opacity='0' result='BackgroundImageFix'/><feBlend mode='normal' in='SourceGraphic' in2='BackgroundImageFix' result='shape'/><feGaussianBlur stdDeviation='110.5' result='effect1_foregroundBlur_39_143'/></filter><filter id='filter1_f_39_143' x='1120' y='-336' width='1200' height='1200' filterUnits='userSpaceOnUse' color-interpolation-filters='sRGB'><feFlood flood-opacity='0' result='BackgroundImageFix'/><feBlend mode='normal' in='SourceGraphic' in2='BackgroundImageFix' result='shape'/><feGaussianBlur stdDeviation='110.5' result='effect1_foregroundBlur_39_143'/></filter><linearGradient id='paint0_linear_39_143' x1='196.5' y1='902' x2='-2.55853e-05' y2='1264' gradientUnits='userSpaceOnUse'><stop stop-color="var(--bttm-left-blur-1)"/><stop offset='1' stop-color="var(--bttm-left-blur-2)"/></linearGradient><linearGradient id='paint1_linear_39_143' x1='1720' y1='-115' x2='1720' y2='643' gradientUnits='userSpaceOnUse'><stop stop-color="var(--top-right-blur-1)"/><stop offset='1' stop-color="var(--top-right-blur-2)" /></linearGradient></defs></svg>     
 <div id="content">
   <div class="header">
-    <iframe
-    src="https://www.chatbase.co/chatbot-iframe/mfKfZZ1YAiTjrLlNrS3fP"
-    width="100%"
-    style="height: 100%; min-height: 700px"
-    frameborder="0"
-    ></iframe>
     <h1>Quickstart Template</h1>
+
+    
     <div class="logo">
       <img src="https://user-images.githubusercontent.com/43764894/223559747-e9d7f19d-91bf-46a9-a0cb-8d6a40d3cfa3.png" alt="netlify + hugo banner" role="presentation">
     </div>
@@ -33,11 +29,24 @@
       </li>
     </ul>
   </div>
+  <!-- Coloque o chat bot no canto direito inferior usando CSS -->
   <iframe
-    src="https://www.chatbase.co/chatbot-iframe/MIYC4ZlZgneMPdP4fTP-Q"
-    width="100%"
-    style="height: 100%; min-height: 700px"
+    id="chatbot-frame"
+    src="https://www.chatbase.co/chatbot-iframe/mfKfZZ1YAiTjrLlNrS3fP"
     frameborder="0"
     ></iframe>
 </div>
+<style>
+  /* CSS para posicionar o chat bot no canto direito inferior */
+  #chatbot-frame {
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+    width: 300px; /* Defina a largura desejada para o chat bot */
+    height: 400px; /* Defina a altura desejada para o chat bot */
+    border: none;
+    background-color: white;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  }
+</style>
 {{ end }}
