--- a/themes/netlify-basic/layouts/index.html
+++ b/themes/netlify-basic/layouts/index.html
@@ -4,7 +4,6 @@
   <div class="header">
     <h1>Quickstart Template</h1>
 
-    
     <div class="logo">
       <img src="https://user-images.githubusercontent.com/43764894/223559747-e9d7f19d-91bf-46a9-a0cb-8d6a40d3cfa3.png" alt="netlify + hugo banner" role="presentation">
     </div>
@@ -49,6 +48,7 @@
     border: none;
     background-color: white;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    z-index: 9999; /* Certifique-se de que o chat bot apareça acima de outros elementos */
   }
 </style>
 {{ end }}
